[package]
name = "oxide-parser-wasm"
version = "1.0.17"
edition = "2021"
authors = ["WindPress <hi@wind.press>"]
description = "tailwindcss-oxide parser wasm"
license = "MIT"
repository = "https://github.com/wind-press/oxide-parser-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
tailwindcss-oxide = { git = "https://github.com/tailwindlabs/tailwindcss.git", version = "0.1.0" }
wasm-bindgen = "0.2.92"
